@@ -1,7 +1,11 @@
 dnl
 dnl Which translations should be installed?
 dnl
-AC_CHECK_FUNCS(gettext, gettext_found=yes, gettext_found=no)
+AC_ARG_WITH([gettext], AC_HELP_STRING([--without-gettext], [do not build with gettext support]),
+            [ with_gettext=${withval} ], [ with_gettext=yes ])
+if test "x$with_gettext" != "xno"; then
+  AC_CHECK_FUNCS(gettext, gettext_found=yes, gettext_found=no)
+fi
 if test x"$gettext_found" != xyes ; then
   AC_CHECK_LIB(intl, gettext,
                [ LIBINTL_LIBS="-lintl";
@@ -9,6 +13,7 @@ if test x"$gettext_found" != xyes ; then
                [ gettext_found=no ],
                [ -liconv ])
 fi
+
 if test x"$gettext_found" = xyes ; then
   AC_CHECK_HEADERS(libintl.h, libintl_h_found=yes, libintl_h_found=no)
   if test x"$libintl_h_found" = xyes ; then
