@@ -1,5 +1,9 @@
 2011-12-28  Moritz Bunkus  <moritz@bunkus.org>
 
+	* build system: Added an option "--without-gettext" that allows
+	for building without support for translations even if gettext
+	itself is installed.
+
 	* build system: Added an option "--without-curl" that allows for
 	building without CURL support even if CURL itself is installed.
 
